Fix Selenoid setup + updated Basic.java