@@ -1,25 +1,47 @@
 package org.example.test.utilis;
 
-import org.openqa.selenium.remote.DesiredCapabilities;
-import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.util.ArrayList;
+import java.util.HashMap;
 
 public class DriverSelenoid {
 
     public static WebDriver setup() throws MalformedURLException {
 
-        DesiredCapabilities caps = new DesiredCapabilities();
-        caps.setBrowserName("chrome");
-        caps.setVersion("128.0");
-        caps.setCapability("enableVNC", true);
-        caps.setCapability("enableVideo", true);
+        ChromeOptions options = new ChromeOptions();
 
+        // IMPORTANT pentru Selenium 4 -> fără asta aruncă Illegal key values
+        options.addArguments("--no-sandbox");
+        options.addArguments("--headless=new");
+        options.addArguments("--disable-dev-shm-usage");
+        options.addArguments("--disable-gpu");
+        options.addArguments("--disable-infobars");
+        options.addArguments("--disable-extensions");
+        options.addArguments("--window-size=1920,1080");
+
+        // Specific pentru Selenoid
+        HashMap<String, Object> selenoidOptions = new HashMap<>();
+        selenoidOptions.put("name", "GitHub Actions Test");
+        selenoidOptions.put("sessionTimeout", "15m");
+        selenoidOptions.put("enableVNC", true);
+        selenoidOptions.put("enableVideo", true);
+        selenoidOptions.put("enableLog", true);
+        selenoidOptions.put("env", new ArrayList<String>() {{
+            add("TZ=UTC");
+        }});
+
+        options.setCapability("browserVersion", "128.0");
+        options.setCapability("selenoid:options", selenoidOptions);
+
+        // Conectare la Selenoid local din GitHub Actions
         return new RemoteWebDriver(
-                new URL("http://localhost:4444/wd/hub"),
-                caps
+                URI.create("http://127.0.0.1:4444/wd/hub").toURL(),
+                options
         );
     }
 }
